=======
0.7.0b5
=======
- (note b5 may become 0.7.0)
- orm
  - Fixed regression introduced in 0.7b4 (!) whereby
    query.options(someoption("nonexistent name")) would
    fail to raise an error.  Also added additional
    error catching for cases where the option would
    try to build off a column-based element, further
    fixed up some of the error messages tailored
    in [ticket:2069]

  - Fine tuning of Query clause adaptation when
    from_self(), union(), or other "select from
    myself" operation, such that plain SQL expression
    elements added to filter(), order_by() etc.
    which are present in the nested "from myself" 
    query *will* be adapted in the same way an ORM
    expression element will, since these
    elements are otherwise not easily accessible.
    [ticket:2155]

  - Fixed bug where determination of "self referential"
    relationship would fail with no workaround
    for joined-inh subclass related to itself,
    or joined-inh subclass related to a subclass
    of that with no cols in the sub-sub class 
    in the join condition.  [ticket:2149]
    Also in 0.6.8.

  - mapper() will ignore non-configured foreign keys
    to unrelated tables when determining inherit
    condition between parent and child class,
    but will raise as usual for unresolved
    columns and table names regarding the inherited
    table.  This is an enhanced generalization of 
    behavior that was already applied to declarative
    previously.  [ticket:2153]   0.6.8 has a more
    conservative version of this which doesn't
    fundamentally alter how join conditions
    are determined.

  - It is an error to call query.get() when the
    given entity is not a single, full class 
    entity or mapper (i.e. a column).  This is
    a deprecation warning in 0.6.8.  
    [ticket:2144]

  - Fixed a potential KeyError which under some
    circumstances could occur with the identity 
    map, part of [ticket:2148]

  - added Query.with_session() method, switches 